Fixed alignment issues in header - still need to switch logo to an image. Moved speedup/slowdown to u/i keys.

--- a/css/style.css
+++ b/css/style.css
@@ -53,15 +53,27 @@ button:focus {
 /** Custom UI Elements **/
 
 .btn {
-    padding: 3px 7px;
+    position: relative;
+    display: block;
+    float: left;
+    height: 23px;
+    margin: 0 0 0 5px;
+    padding: 0 7px;
     border: 1px solid #c0c0c0;
-    border-radius: 2px;
-    font-size: 14px;
     color: #c0c0c0;
+    font-size: 13px;
+    line-height: 20px;
+    text-decoration: none;
+    -webkit-font-smoothing: antialiased;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
     background-color: white;
-}
-
-.btn:hover {
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: -moz-none;
+    -o-user-select: none;
+    user-select: none;
     cursor: pointer;
 }
 
@@ -79,27 +91,28 @@ header {
     top: 0;
 }
 
-header ul {
+#buttonContainer {
     position: fixed;
     top: 0;
     left: 0;
     margin: 10px;
 }
 
-header ul li {
+.logo {
+    position: relative;
     display: block;
     float: left;
-}
-
-.logo {
     width: 25px;
-    height: 24px;
-    margin: 2px;
-    border-radius: 2px;
+    height: 25px;
     text-align: center;
     font-size: 20px;
-    background-color: #2980b9;
     color: white;
+    background-color: #2980b9;
+    background-size: cover;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    overflow: hidden;
 }
 
 footer {
